eliminar forma de pago, productos más rápido y grande el modal

--- a/css/nueva_compra.css
+++ b/css/nueva_compra.css
@@ -127,3 +127,10 @@ table.table td .add {
     border-radius: 50px;
     line-height: 13px;
 }
+
+@media (min-width: 768px) {
+    .modal-dialog {
+        width: 800px;
+        margin: 30px auto;
+    }
+}
